--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "name": "desafios",
   "version": "1.0.0",
-  "description": "desafiosdecoderhousebackend",
+  "description": "desafios coderhouse",
   "main": "./src/app.js",
   "scripts": {
     "test": "node .",
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/dunkem/PROYECTO-BACK-END-CODERHOUSE"
   },
   "keywords": [
     "backend",
     "node",
     "javascript"
   ],
-  "author": "Douglas Dunke",
+  "author": "Douglas",
   "license": "MIT",
   "bugs": {
     "url": ""
@@ -34,6 +34,7 @@
   "dependencies": {
     "express": "4.18.2",
     "express-handlebars": "7.0.2",
+    "mongoose": "^7.0.3",
     "socket.io": "4.6.1"
   }
 }
