--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "type": "module",
   "name": "desafios",
   "version": "1.0.0",
-  "description": "desafios coderhouse",
+  "description": "desafios de coderhouse",
   "main": "./src/app.js",
   "scripts": {
     "test": "node .",
     "dev": "nodemon -e 'js,handlebars' .",
-    "lint": "standard . --fix"
+    "lint": "standard . --fix",
+    "git-add": "sh -c 'git add .'",
+    "commit": "npm run git-add && cz"
   },
   "repository": {
     "type": "git",
@@ -21,20 +23,38 @@
   "author": "Douglas",
   "license": "MIT",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/dunkem/PROYECTO-BACK-END-CODERHOUSE"
   },
-  "homepage": "",
-  "devDependencies": {
-    "@types/express": "4.17.17",
-    "standard": "17.0.0"
-  },
+  "homepage": "https://github.com/dunkem/PROYECTO-BACK-END-CODERHOUSE",
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
   },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "devDependencies": {
+    "@types/express": "4.17.17",
+    "commitizen": "4.3.0",
+    "cz-conventional-changelog": "3.3.0",
+    "init": "0.1.2",
+    "standard": "17.0.0"
+  },
   "dependencies": {
+    "bcrypt": "5.1.0",
+    "connect-mongo": "5.0.0",
+    "cookie-parser": "1.4.6",
+    "dotenv": "^16.0.3",
     "express": "4.18.2",
     "express-handlebars": "7.0.2",
-    "mongoose": "^7.0.3",
-    "socket.io": "4.6.1"
+    "express-session": "1.17.3",
+    "jsonwebtoken": "9.0.0",
+    "mongoose": "7.0.3",
+    "mongoose-paginate-v2": "1.7.1",
+    "passport": "0.6.0",
+    "passport-github2": "0.1.12",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "1.0.0"
   }
 }
